--- a/aboutus.html
+++ b/aboutus.html
@@ -7,7 +7,7 @@
             <div class="row gy-3 gy-md-4 gy-lg-0 align-items-lg-center">
                 <!-- Profile Faces Pic -->
                 <div class="col-12 col-lg-6 col-xl-5">
-                    <img class="img-fluid rounded" loading="lazy" src="images/download.png" alt="About 1">
+                    <img class="img-fluid rounded" loading="lazy" src="images/aboutusimg.png" alt="About 1">
                 </div>
                 <!-- About Us Info -->
                 <div class="col-12 col-lg-6 col-xl-7">
